# Aegis

./: .env  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  API.md  DATABASE.md  IMPLEMENTATION.md  MEMORY.md  PAGE_DATA_MAP.md  README.md  RULES.md  SETUP.md  SOLUTION.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  schema.md  simulate_aegis.py
.github/workflows/: backend-ci.yml  codeql.yml  dependency-review.yml  docker-ci.yml  docker-publish.yml  frontend-ci.yml  python-lint.yml  release.yml  security-ci.yml  security-container-scan.yml  security-scorecard.yml  stale.yml
backend/: main.py
backend/analysis/: __init__.py  cert_analyzer.py  cipher_parser.py  constants.py  handshake_metadata_resolver.py  risk_scorer.py
backend/cbom/: __init__.py  cyclonedx_mapper.py
backend/cert/: __init__.py  signer.py
backend/compliance/: __init__.py  rules_engine.py
backend/core/: __init__.py  base.py  config.py  database.py
backend/discovery/: __init__.py  aggregator.py  api_inspector.py  cert_extractor.py  dns_enumerator.py  dns_validator.py  port_scanner.py  tls_probe.py  types.py  vpn_probe.py
backend/intelligence/: __init__.py  cloud_utils.py  hndl_calculator.py  (+5 more)
docker/: Dockerfile.oqs  init-age.sql
docs/: README.md
documentations/: API.md  CONTEXT.md  DATABASE.md  SOLUTION.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
migrations/: env.py
scripts/: ingest_nist_docs.py  validate_ingested_corpus.py
simulation/: run.py
tests/: conftest.py
(+216 files in other folders)
